// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should reject arrays that have incorrect length 1`] = `
[
  {
    "code": "too_short",
    "length": 0,
    "maxLength": 1,
    "minLength": 1,
    "path": [],
  },
]
`;

exports[`should reject arrays that have incorrect length 2`] = `
[
  {
    "code": "too_long",
    "length": 2,
    "maxLength": 1,
    "minLength": 1,
    "path": [],
  },
]
`;

exports[`should reject invalid values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should reject invalid values 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "path": [
      1,
    ],
    "received": "string",
  },
]
`;
